# RustActixWeb4AsyncGraphQLStarter

./: .gitignore  Cargo.toml  Makefile.toml  NOTES.md  README.md  TODO  backup.sh  client.http  history.txt
apps/server/: Cargo.toml
apps/server/src/: constants.rs  main.rs
books/src/: lib.rs
common/: Cargo.toml
common/src/: lib.rs  logger.rs
config/: default.toml
libs/books/: Cargo.toml
libs/books/src/: lib.rs
libs/common/: Cargo.toml
libs/common/src/: config.rs  lib.rs  logger.rs  simple_broker.rs  util.rs
libs/utils_to_RIP_AND_DEL/src/: config.rs  errors.rs  lib.rs  ordering.rs  pagination.rs
server/: Cargo.toml
server/src/: constants.rs  main.rs
