[package]
name = "books"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
async-graphql = "4.0.8"
slab = "0.4.2"
futures-util = "0.3.0"
# futures-channel = "0.3.0"
# once_cell = "1.0"
futures-timer = "3.0.2"
async-stream = "0.3.0"