[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slab = "0.4.2"
futures-util = "0.3.0"
futures-channel = "0.3.0"
once_cell = "1.0"
# log
log = "0.4.14"
log4rs = "1.0.0"
# config
figment = { version = "0.10.6", features = ["env", "toml"] }
# serde
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
# errorHandling
anyhow = "1.0"
